# ChromeCastHomeMade

./: CMakeLists.txt  README.md  client_screen.c  server_screen.c  test_media.c
core/: CMakeLists.txt  core.h  greet.c
gui/: CMakeLists.txt  main.cpp
include/: server.h
server/: client.c  server.c  sokcet.c
